@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-23T02:02:40Z",
-  "count" : 2,
+  "timestamp" : "2022-09-05T08:23:28Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
