@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-05T02:09:50Z",
+  "timestamp" : "2022-09-05T08:23:28Z",
   "count_outdated" : 2372,
   "uniques_outdated" : 561,
-  "count" : 2422,
-  "uniques" : 594,
+  "count" : 2427,
+  "uniques" : 599,
   "clones" : [
     {
       "timestamp": "2022-08-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -95,6 +95,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-05T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 5 ]
     }
   ]
 }
