@@ -1,10 +1,10 @@
 {
-  "count": 50,
-  "uniques": 19,
+  "count": 55,
+  "uniques": 22,
   "clones": [
     {
       "timestamp": "2022-08-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -66,6 +66,11 @@
       "timestamp": "2022-09-04T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-05T00:00:00Z",
+      "count": 6,
+      "uniques": 5
     }
   ]
 }
