@@ -1,3 +1,11 @@
+2022-09-05T08:23:28Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2991753050
+* notice: last 14d: unq all: 22 55
+* notice: prev accum: outdated-unq outdated-all / unq all: 561 2372 / 594 2422
+* notice: next accum: outdated-unq outdated-all / unq all: 561 2372 / 599 2427
+* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -1 / +5 +6 -0 -0 / 5 6
+* notice: removed / changed dates: [] / [2022-08-22 2022-09-05]
+
 2022-09-05T02:09:50Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2990381944
 * notice: last 14d: unq all: 19 50
